Edit apply Pay Functionallty

--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -1909,7 +1909,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ENH-tk-7od" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9588.5496183206105" y="-437.32394366197184"/>
+            <point key="canvasLocation" x="9570" y="-430"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cuG-G3-iry">
